[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["jayin301 <mocajay.jh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "4.8.0"
oauth2client = "^4.1.3"
google-api-python-client = "2.46.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
